m3s-ms-api-gke/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: m3s-ms-api
  labels:
    app: ms-api
    project: m3s
    env: production
