m3s-ms-api-gke/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-api
  namespace: m3s-ms-api
  annotations:
    cloud.google.com/neg: '{"ingress": true}'  # Network Endpoint Group for better load balancing
spec:
  type: ClusterIP
  selector:
    app: ms-api
  ports:
    - name: http
      port: 8002
      targetPort: 8002
      protocol: TCP
