m3s-ms-api-gke/04-ingress.yaml
# GKE Ingress menggunakan Google Cloud Load Balancer (bukan Traefik)
# Untuk HTTPS, perlu ManagedCertificate atau cert-manager
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-api
  namespace: m3s-ms-api
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "ms-api-cert"
    kubernetes.io/ingress.global-static-ip-name: "m3s-ms-api-ip"  # Static IP (buat dulu di GCP)
spec:
  rules:
    - host: ms-m3sbri-api.pcsindonesia.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-api
                port:
                  number: 8002
